syntax = "proto3";

package neon_server_example;

option csharp_namespace = "Neon.ServerExample.Proto";


message ClientMovedMessageProto {
  float x = 1;
  float y = 2;
}