syntax = "proto3";

package neon_server_example;

option csharp_namespace = "Neon.ServerExample.Proto";

message RealtimeRoomProto {
  bytes roomGuid = 1;
}

message RealtimeRoomCollectionProto {
  repeated RealtimeRoomProto rooms = 1;
}